[package]
name = "quadranet"
version = "0.2.0"
edition = "2021"
resolver = "3"

[dependencies]
lora-phy = { git = "https://github.com/lora-rs/lora-rs", version = "3.0.2-alpha", features = ["defmt-03"] }
embedded-hal-async = "1.0.0"
snafu = { version = "0.8", default-features = false }
heapless = "0.8"
postcard = "1.0"
defmt = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

[dev-dependencies]
postcard = { version = "1.0", features = ["alloc"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
